Replace Google Analytics by Google Tags

--- a/contact/index.html
+++ b/contact/index.html
@@ -7,20 +7,18 @@
   <title>Contact &middot; Bahadır Özdemir</title>
   <meta name="description" content="This is the personal website of Bahadir Ozdemir.">
 
-  <!-- Google Analytics -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-T16YE29HW3"></script>
 <script>
-  (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date(); a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-  ga('create', '175508522', 'auto');
-  ga('send', 'pageview');
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-T16YE29HW3');
 </script>
 <!-- End Google Analytics -->
-  <!-- Default Statcounter code for Jekyll
-http://bahadiro.github.io -->
+  <!-- Default Statcounter code for www.bahadirozdemir.com
+http://www.bahadirozdemir.com -->
 <script type="text/javascript">
 var sc_project=12511394; 
 var sc_invisible=1; 
