--- a/index.html
+++ b/index.html
@@ -7,20 +7,18 @@
   <title>About Me &middot; Bahadır Özdemir</title>
   <meta name="description" content="This is the personal website of Bahadir Ozdemir.">
 
-  <!-- Google Analytics -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-T16YE29HW3"></script>
 <script>
-  (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date(); a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-  ga('create', '175508522', 'auto');
-  ga('send', 'pageview');
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-T16YE29HW3');
 </script>
 <!-- End Google Analytics -->
-  <!-- Default Statcounter code for Jekyll
-http://bahadiro.github.io -->
+  <!-- Default Statcounter code for www.bahadirozdemir.com
+http://www.bahadirozdemir.com -->
 <script type="text/javascript">
 var sc_project=12511394; 
 var sc_invisible=1; 
@@ -88,7 +86,7 @@ alt="web stats"></a></div></noscript>
   <h1 class="page-title">About Me</h1>
   <p>I am a software engineer at Google. I work on large-scale YouTube video content understanding. I earned my Ph.D. in Computer Science from the <a href="http://www.umd.edu">University of Maryland, College Park</a>, where I worked on computer vision and machine learning. I also hold M.S and B.S. degrees in engineering, respectively, from <a href="https://w3.bilkent.edu.tr/bilkent">Bilkent University</a> and <a href="http://www.metu.edu.tr">Middle East Technical University</a>.</p>
 
-<p>You can find my resume <a href="/assets/pdf/bahadir_ozdemir_resume.pdf">here</a> and LinkedIn profile <a href="https://www.linkedin.com/in/ozdemirbahadir">here</a>.</p>
+<p>You can find my resume <a href="/assets/pdf/bahadir_ozdemir_resume.pdf">here</a> and my LinkedIn profile <a href="https://www.linkedin.com/in/ozdemirbahadir">here</a>.</p>
 
 <p>If you want to contact me, please fill out the form in the <a href="/contact">Contact tab</a>.</p>
 
